--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,23 @@ task wrapper(type: Wrapper) {
     gradleVersion = '3.1'
 }
 
+ant.importBuild 'build.xml'
+
 apply plugin: 'kotlin'
 apply plugin: 'idea'
 apply plugin: 'application'
+apply plugin: 'jacoco'
 
-ant.importBuild 'build.xml'
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 mainClassName = "pl.weblang.WeblangKt"
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
+}
 
 jar {
     baseName = 'weblang'
@@ -40,9 +50,6 @@ task patchJar(type: Exec, dependsOn: jar) {
 
     outputs.upToDateWhen { false }
 }
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
