--- a/build.gradle
+++ b/build.gradle
@@ -25,12 +25,19 @@ targetCompatibility = 1.8
 
 mainClassName = "pl.weblang.WeblangKt"
 
-jacocoTestReport {
+sourceSets {
+    main.kotlin.srcDirs += 'src/main/kotlin'
+}
+
+jacoco {
     toolVersion = "0.5.8.201207111220"
     reportsDir = file("$buildDir/reports/jacoco")
+}
+
+jacocoTestReport {
     reports {
         xml.enabled true
-        xml.destination "${buildDir}/reports/jacoco/jacoco/report.xml"
+        csv.enabled true
     }
 }
 
@@ -56,6 +63,9 @@ repositories {
 
 dependencies {
     compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
+    testCompile "org.jetbrains.kotlin:kotlin-test:${kotlinVersion}"
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}"
+    testCompile 'io.kotlintest:kotlintest:1.3.5'
 
     // OmegaT 
     compile('org.omegat:omegat:4.0.0-02') { transitive = false }
