--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,6 @@ sourceSets {
 }
 
 jacoco {
-    toolVersion = "0.5.8.201207111220"
     reportsDir = file("$buildDir/reports/jacoco")
 }
 
@@ -38,6 +37,14 @@ jacocoTestReport {
     reports {
         xml.enabled true
         csv.enabled true
+    }
+}
+
+test {
+    jacoco {
+        append = false
+        destinationFile = file("$buildDir/reports/jacoco/jacocoTest.exec")
+        classDumpFile = file("$buildDir/reports/jacoco/classpathdumps")
     }
 }
 
@@ -59,7 +66,6 @@ repositories {
         url 'http://dl.bintray.com/omegat-org/maven'
     }
 }
-
 
 dependencies {
     compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
