--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,35 @@
 buildscript {
     ext {
-        kotlinVersion = '1.0.3'
+        kotlinVersion = '1.1-M04'
+        kotlinCoroutinesVersion = '0.2-beta'
+        spek_version = '1.1.0-beta2'
         springBootVersion = '1.4.1.RELEASE'
+        junit_runner_version = '1.0.0-M3'
+        junit4Version = '4.12'
+        junitVintageVersion = '4.12.0-M3'
+        junitPlatformVersion = '1.0.0-M3'
+        junitJupiterVersion = '5.0.0-M3'
+        log4jVersion = '2.6.2'
     }
     repositories {
+        maven {
+            url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1'
+        }
         mavenCentral()
     }
     dependencies {
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0-M3'
+    }
+}
+
+configurations.all {
+    resolutionStrategy {
+        eachDependency { DependencyResolveDetails details ->
+            if (details.requested.group == 'org.jetbrains.kotlin') {
+                details.useVersion kotlinVersion
+            }
+        }
     }
 }
 
@@ -19,6 +41,7 @@ apply plugin: 'kotlin'
 apply plugin: 'idea'
 apply plugin: 'application'
 apply plugin: 'jacoco'
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -39,6 +62,16 @@ jacocoTestReport {
     reports {
         xml.enabled true
         csv.enabled true
+    }
+}
+
+junitPlatform {
+    platformVersion junitPlatformVersion
+
+    filters {
+        engines {
+            include 'junit-jupiter', 'junit-vintage', 'spek'
+        }
     }
 }
 
@@ -65,26 +98,58 @@ jar {
 
 repositories {
     mavenCentral()
+    jcenter()
     maven {
         url 'http://dl.bintray.com/omegat-org/maven'
     }
+    maven {
+        url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1'
+    }
+    maven {
+        url "https://dl.bintray.com/jetbrains/spek"
+    }
+
 }
 
 dependencies {
     // Project
-    compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
+    compile "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-async:${kotlinCoroutinesVersion}"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-generate:${kotlinCoroutinesVersion}"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-rx:${kotlinCoroutinesVersion}"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines:${kotlinCoroutinesVersion}"
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'org.jsoup:jsoup:1.10.1'
     compile 'com.mashape.unirest:unirest-java:1.4.9'
+    compile 'org.slf4j:slf4j-log4j12:1.7.21'
+    compile 'io.github.microutils:kotlin-logging:1.4'
+    compile 'com.natpryce:konfig:1.4.2.0'
+    compile 'io.reactivex:rxkotlin:0.60.0'
+    compile group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.2.RELEASE'
+
     // OmegaT 
     compile('org.omegat:omegat:4.0.0-02') { transitive = false }
     compile 'org.omegat:vldocking:3.0.5'
 
+    // Test
+    testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
+    testCompile("junit:junit:${junit4Version}")
+    testRuntime("org.junit.vintage:junit-vintage-engine:${junitVintageVersion}")
+    testRuntime("org.apache.logging.log4j:log4j-core:${log4jVersion}")
+    testRuntime("org.apache.logging.log4j:log4j-jul:${log4jVersion}")
+    testCompile 'org.amshove.kluent:kluent:1.11'
+    testCompile "org.jetbrains.spek:spek-api:$spek_version"
+    testRuntime "org.jetbrains.spek:spek-junit-platform-engine:$spek_version"
+    testCompile "org.junit.platform:junit-platform-runner:$junit_runner_version"
+    testRuntime "org.junit.platform:junit-platform-launcher:$junit_runner_version"
     testCompile "org.jetbrains.kotlin:kotlin-test:${kotlinVersion}"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}"
     testCompile 'io.kotlintest:kotlintest:1.3.5'
-    testCompile 'io.kotlintest:kotlintest:1.3.5'
+    testCompile "com.github.tomakehurst:wiremock:2.4.1"
+    testCompile "com.nhaarman:mockito-kotlin:1.0.0"
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.4.3'
     testCompile sourceSets.main.output
 }
 
