--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     ext {
+        appName = 'weblang'
         kotlinVersion = '1.1-M04'
         kotlinCoroutinesVersion = '0.2-beta'
-        spek_version = '1.1.0-beta2'
+        spekVersion = '1.1.0-beta2'
         springBootVersion = '1.4.1.RELEASE'
-        junit_runner_version = '1.0.0-M3'
+        junitRunnerVersion = '1.0.0-M3'
         junit4Version = '4.12'
         junitVintageVersion = '4.12.0-M3'
         junitPlatformVersion = '1.0.0-M3'
@@ -30,7 +31,7 @@ configurations {
 
 configurations.all {
     resolutionStrategy {
-        eachDependency { DependencyResolveDetails details ->
+        eachDependency { final details ->
             if (details.requested.group == 'org.jetbrains.kotlin') {
                 details.useVersion kotlinVersion
             }
@@ -90,16 +91,13 @@ test {
 }
 
 jar {
-    baseName = 'weblang'
+    baseName = appName
     version = '0.0.1-SNAPSHOT'
     manifest {
         attributes('Implementation-Version': version)
         attributes('OmegaT-Plugin': 'true')
         attributes(['OmegaT-Plugin': 'base'], 'pl.weblang.Weblang')
     }
-
-    exclude('org.omegat:omegat:4.0.1')
-
     from {
         (configurations.runtime - configurations.omegat).collect { it.isDirectory() ? it : zipTree(it) }
     }
@@ -146,10 +144,10 @@ dependencies {
     testRuntime("org.apache.logging.log4j:log4j-core:${log4jVersion}")
     testRuntime("org.apache.logging.log4j:log4j-jul:${log4jVersion}")
     testCompile 'org.amshove.kluent:kluent:1.11'
-    testCompile "org.jetbrains.spek:spek-api:$spek_version"
-    testRuntime "org.jetbrains.spek:spek-junit-platform-engine:$spek_version"
-    testCompile "org.junit.platform:junit-platform-runner:$junit_runner_version"
-    testRuntime "org.junit.platform:junit-platform-launcher:$junit_runner_version"
+    testCompile "org.jetbrains.spek:spek-api:$spekVersion"
+    testRuntime "org.jetbrains.spek:spek-junit-platform-engine:$spekVersion"
+    testCompile "org.junit.platform:junit-platform-runner:$junitRunnerVersion"
+    testRuntime "org.junit.platform:junit-platform-launcher:$junitRunnerVersion"
     testCompile "org.jetbrains.kotlin:kotlin-test:${kotlinVersion}"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}"
     testCompile 'io.kotlintest:kotlintest:1.3.5'
@@ -158,4 +156,25 @@ dependencies {
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.4.3'
     testCompile sourceSets.main.output
 }
+
+task runOmegatInstallDistTask(type: GradleBuild) {
+    buildFile = '../omegat/build.gradle'
+    tasks = ['installDist']
+    getStartParameter().setExcludedTaskNames(['check'])
+}
+
+task copyJarToOmegatInstallDir(type: Copy) {
+    outputs.upToDateWhen { false }
+    from "build/libs/"
+    into "../omegat/build/install/OmegaT/plugins/"
+}
+
+if (file("../omegat").isDirectory()) {
+    println("Found sibling project directory: ../omegat. Will run installDist task in omegat project and copy jar to its install directory")
+    clean.dependsOn runOmegatInstallDistTask
+    build.dependsOn runOmegatInstallDistTask
+    build.dependsOn runOmegatInstallDistTask
+    build.finalizedBy(copyJarToOmegatInstallDir)
+}
+
 
