--- a/src/test/resources/omegat/PL-EN/omegat/last_entry.properties
+++ b/src/test/resources/omegat/PL-EN/omegat/last_entry.properties
@@ -1,4 +1,4 @@
-#Thu Jan 19 22:51:53 CET 2017
+#Sun Jan 29 15:01:58 CET 2017
 LAST_ENTRY_FILE=file.txt
-LAST_ENTRY_SRC=Te zdanie zawiera s\u0142owo z glosariusza, kt\u00F3rym jest czujnik elektrochemiczny typu A. Te zdanie r\u00F3wnie\u017C zawiera s\u0142owo z glosariusza, a jest nim Lot nad kuku\u0142czym gniazdem.
-LAST_ENTRY_NUMBER=3
+LAST_ENTRY_SRC=Opr\u00F3cz szybko\u015Bci przejazdu (tylko muldy) oceniane s\u0105 tak\u017Ce elementy akrobatyczne wykonywane podczas przejazdu, np. obroty.
+LAST_ENTRY_NUMBER=4
