Moved to kotlin 0.8 courotines release, added new tables, added glossary search.

--- a/src/test/resources/omegat/PL-EN/omegat/last_entry.properties
+++ b/src/test/resources/omegat/PL-EN/omegat/last_entry.properties
@@ -1,4 +1,4 @@
-#Tue Jan 31 22:55:34 CET 2017
+#Sat Feb 11 15:33:22 CET 2017
 LAST_ENTRY_FILE=file.txt
-LAST_ENTRY_SRC=Opr\u00F3cz szybko\u015Bci przejazdu (tylko muldy) oceniane s\u0105 tak\u017Ce elementy akrobatyczne wykonywane podczas przejazdu, np. obroty.
-LAST_ENTRY_NUMBER=4
+LAST_ENTRY_SRC=Pozwalaj\u0105 one na wykonywanie skomplikowanych ewolucji w powietrzu.
+LAST_ENTRY_NUMBER=6
