--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext {
         appName = 'weblang'
-        kotlinVersion = '1.1-M04'
-        kotlinCoroutinesVersion = '0.2-beta'
+        kotlinVersion = '1.1.0-beta-38'
+        kotlinCoroutinesVersion = '0.6-beta'
         spekVersion = '1.1.0-beta2'
         springBootVersion = '1.4.1.RELEASE'
         junitRunnerVersion = '1.0.0-M3'
@@ -24,6 +24,23 @@ buildscript {
     }
 }
 
+apply plugin: 'kotlin'
+apply plugin: 'idea'
+apply plugin: 'application'
+apply plugin: 'jacoco'
+apply plugin: 'org.junit.platform.gradle.plugin'
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+mainClassName = 'pl.weblang.WeblangKt'
+
+kotlin {
+    experimental {
+        coroutines 'enable'
+    }
+}
+
 configurations {
     omegat
     compile.extendsFrom omegat
@@ -42,17 +59,6 @@ configurations.all {
 task wrapper(type: Wrapper) {
     gradleVersion = '3.1'
 }
-
-apply plugin: 'kotlin'
-apply plugin: 'idea'
-apply plugin: 'application'
-apply plugin: 'jacoco'
-apply plugin: 'org.junit.platform.gradle.plugin'
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-mainClassName = 'pl.weblang.WeblangKt'
 
 sourceSets {
     main.kotlin.srcDirs += 'src/main/kotlin'
@@ -103,44 +109,24 @@ jar {
     }
 }
 
-repositories {
-    mavenCentral()
-    jcenter()
-    maven {
-        url 'http://dl.bintray.com/omegat-org/maven'
-    }
-    maven {
-        url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1'
-    }
-    maven {
-        url "https://dl.bintray.com/jetbrains/spek"
-    }
-    maven {
-        url "https://dl.bintray.com/kotlin/exposed"
-    }
-}
-
 dependencies {
     // Project
     compile "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-async:${kotlinCoroutinesVersion}"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-generate:${kotlinCoroutinesVersion}"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-rx:${kotlinCoroutinesVersion}"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines:${kotlinCoroutinesVersion}"
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'org.jsoup:jsoup:1.10.1'
-    compile 'com.mashape.unirest:unirest-java:1.4.9'
-    compile 'org.slf4j:slf4j-log4j12:1.7.21'
-    compile 'io.github.microutils:kotlin-logging:1.4'
-    compile 'com.natpryce:konfig:1.4.2.0'
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:${kotlinCoroutinesVersion}"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:${kotlinCoroutinesVersion}"
+    compile "com.squareup.retrofit2:retrofit:2.1.0"
+    compile "com.squareup.retrofit2:converter-gson:2.1.0"
+    compile "org.jsoup:jsoup:1.10.1"
+    compile "com.mashape.unirest:unirest-java:1.4.9"
+    compile "org.slf4j:slf4j-log4j12:1.7.21"
+    compile "io.github.microutils:kotlin-logging:1.4"
+    compile "com.natpryce:konfig:1.4.2.0"
     compile group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.2.RELEASE'
-
-    compile 'org.jetbrains.exposed:exposed:0.7.5'
-    compile 'com.h2database:h2:1.4.192'
+    compile "org.jetbrains.exposed:exposed:0.7.5"
+    compile "com.h2database:h2:1.4.192"
 
     // OmegaT 
-    omegat('org.omegat:omegat:4.0.1')
+    omegat("org.omegat:omegat:4.0.1")
 
     // Test
     testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
@@ -156,11 +142,28 @@ dependencies {
     testRuntime "org.junit.platform:junit-platform-launcher:$junitRunnerVersion"
     testCompile "org.jetbrains.kotlin:kotlin-test:${kotlinVersion}"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}"
-    testCompile 'io.kotlintest:kotlintest:1.3.5'
+    testCompile "io.kotlintest:kotlintest:1.3.5"
     testCompile "com.github.tomakehurst:wiremock:2.4.1"
     testCompile "com.nhaarman:mockito-kotlin:1.0.0"
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.4.3'
     testCompile sourceSets.main.output
+}
+
+repositories {
+    mavenCentral()
+    jcenter()
+    maven {
+        url 'http://dl.bintray.com/omegat-org/maven'
+    }
+    maven {
+        url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1'
+    }
+    maven {
+        url "https://dl.bintray.com/jetbrains/spek"
+    }
+    maven {
+        url "https://dl.bintray.com/kotlin/exposed"
+    }
 }
 
 task runOmegatInstallDistTask(type: GradleBuild) {
