--- a/src/test/resources/omegat/PL-EN/omegat/last_entry.properties
+++ b/src/test/resources/omegat/PL-EN/omegat/last_entry.properties
@@ -1,4 +1,4 @@
-#Sat Feb 11 15:33:22 CET 2017
-LAST_ENTRY_FILE=file.txt
-LAST_ENTRY_SRC=Pozwalaj\u0105 one na wykonywanie skomplikowanych ewolucji w powietrzu.
-LAST_ENTRY_NUMBER=6
+#Sun Feb 12 12:13:34 CET 2017
+LAST_ENTRY_FILE=file2.txt
+LAST_ENTRY_SRC=Chi\u0144scy badacze postanowili wyja\u015Bni\u0107 ten fenomen, wykorzystuj\u0105c zdj\u0119cia rentegenowskie, tomografi\u0119 i szybk\u0105 kamer\u0119 rejestruj\u0105c\u0105 ruch g\u0142owy stukaj\u0105cego w pie\u0144 dzi\u0119cio\u0142a.
+LAST_ENTRY_NUMBER=13
