DataViewModel compiles, init glitch fixed, Ktlint, reformatted code.

--- a/src/test/resources/omegat/PL-EN/omegat/last_entry.properties
+++ b/src/test/resources/omegat/PL-EN/omegat/last_entry.properties
@@ -1,4 +1,4 @@
-#Sun Feb 12 12:13:34 CET 2017
-LAST_ENTRY_FILE=file2.txt
-LAST_ENTRY_SRC=Chi\u0144scy badacze postanowili wyja\u015Bni\u0107 ten fenomen, wykorzystuj\u0105c zdj\u0119cia rentegenowskie, tomografi\u0119 i szybk\u0105 kamer\u0119 rejestruj\u0105c\u0105 ruch g\u0142owy stukaj\u0105cego w pie\u0144 dzi\u0119cio\u0142a.
-LAST_ENTRY_NUMBER=13
+#Sun Feb 12 19:27:32 CET 2017
+LAST_ENTRY_FILE=file.txt
+LAST_ENTRY_SRC=Oto kilka testowych zda\u0144.
+LAST_ENTRY_NUMBER=1
