--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'application'
 apply plugin: 'jacoco'
@@ -42,6 +43,7 @@ kotlin {
 }
 
 configurations {
+    ktlint
     omegat
     compile.extendsFrom omegat
 }
@@ -124,6 +126,7 @@ dependencies {
     compile group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.2.RELEASE'
     compile "org.jetbrains.exposed:exposed:0.7.5"
     compile "com.h2database:h2:1.4.192"
+    ktlint "com.github.shyiko:ktlint:0.4.0"
 
     // OmegaT 
     omegat("org.omegat:omegat:4.0.1")
@@ -164,6 +167,20 @@ repositories {
     maven {
         url "https://dl.bintray.com/kotlin/exposed"
     }
+}
+
+task ktlint(type: JavaExec) {
+    main = "com.github.shyiko.ktlint.Main"
+    classpath = configurations.ktlint
+    args "src/**/*.kt"
+}
+
+check.dependsOn ktlint
+
+task ktlintFormat(type: JavaExec) {
+    main = "com.github.shyiko.ktlint.Main"
+    classpath = configurations.ktlint
+    args "-F", "src/**/*.kt"
 }
 
 task runOmegatInstallDistTask(type: GradleBuild) {
