Code improvements,  tests added.

--- a/src/test/resources/omegat/PL-EN/omegat/last_entry.properties
+++ b/src/test/resources/omegat/PL-EN/omegat/last_entry.properties
@@ -1,4 +1,4 @@
-#Sun Feb 12 19:27:32 CET 2017
+#Wed Feb 15 08:21:06 CET 2017
 LAST_ENTRY_FILE=file.txt
-LAST_ENTRY_SRC=Oto kilka testowych zda\u0144.
-LAST_ENTRY_NUMBER=1
+LAST_ENTRY_SRC=Narty u\u017Cywane w tej dyscyplinie s\u0105 kr\u00F3tsze od nart zjazdowych.
+LAST_ENTRY_NUMBER=5
