--- a/build.gradle
+++ b/build.gradle
@@ -123,9 +123,10 @@ dependencies {
     compile "org.slf4j:slf4j-log4j12:1.7.21"
     compile "io.github.microutils:kotlin-logging:1.4"
     compile "com.natpryce:konfig:1.4.2.0"
-    compile group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.2.RELEASE'
+    compile "org.thymeleaf:thymeleaf:3.0.2.RELEASE"
     compile "org.jetbrains.exposed:exposed:0.7.5"
     compile "com.h2database:h2:1.4.192"
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.8.6"
     ktlint "com.github.shyiko:ktlint:0.4.0"
 
     // OmegaT 
@@ -135,20 +136,20 @@ dependencies {
     testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
     testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
     testCompile("junit:junit:${junit4Version}")
+    testCompile "org.junit.platform:junit-platform-runner:$junitRunnerVersion"
+    testRuntime "org.junit.platform:junit-platform-launcher:$junitRunnerVersion"
     testRuntime("org.junit.vintage:junit-vintage-engine:${junitVintageVersion}")
     testRuntime("org.apache.logging.log4j:log4j-core:${log4jVersion}")
     testRuntime("org.apache.logging.log4j:log4j-jul:${log4jVersion}")
-    testCompile 'org.amshove.kluent:kluent:1.11'
+    testCompile "org.amshove.kluent:kluent:1.11"
     testCompile "org.jetbrains.spek:spek-api:$spekVersion"
     testRuntime "org.jetbrains.spek:spek-junit-platform-engine:$spekVersion"
-    testCompile "org.junit.platform:junit-platform-runner:$junitRunnerVersion"
-    testRuntime "org.junit.platform:junit-platform-launcher:$junitRunnerVersion"
     testCompile "org.jetbrains.kotlin:kotlin-test:${kotlinVersion}"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}"
     testCompile "io.kotlintest:kotlintest:1.3.5"
     testCompile "com.github.tomakehurst:wiremock:2.4.1"
     testCompile "com.nhaarman:mockito-kotlin:1.0.0"
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.4.3'
+    testCompile "org.mockito:mockito-core:2.4.3"
     testCompile sourceSets.main.output
 }
 
