--- a/src/test/resources/omegat/PL-EN/omegat/last_entry.properties
+++ b/src/test/resources/omegat/PL-EN/omegat/last_entry.properties
@@ -1,4 +1,4 @@
-#Wed Feb 15 18:48:59 CET 2017
+#Thu Feb 16 01:43:31 CET 2017
 LAST_ENTRY_FILE=file.txt
-LAST_ENTRY_SRC=Narty u\u017Cywane w tej dyscyplinie s\u0105 kr\u00F3tsze od nart zjazdowych.
-LAST_ENTRY_NUMBER=5
+LAST_ENTRY_SRC=Opr\u00F3cz szybko\u015Bci przejazdu (tylko muldy) oceniane s\u0105 tak\u017Ce elementy akrobatyczne wykonywane podczas przejazdu, np. obroty - ten segment zawiera r\u00F3wnie\u017C s\u0142owo z glosariusza.
+LAST_ENTRY_NUMBER=4
